Place ships visibly with class change to improve randomness and fix some edge cases, where ships could overlap

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,5 +37,8 @@ main {
     align-items: center;
     font-size: 2rem;
     font-weight: 100;
+}
 
+.gameboard>.field.ship {
+    background-color: darkgrey;
 }
